# funcast

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/funcast/: __init__.py  basis.py  model.py  selection.py
tests/: test_basis.py  test_model.py  test_selection.py
